[project]
name = "psmds"
version = "0.1.0"
description = "Parametric spherical MDS with a Stiefel-constrained linear map for angle- or chordal-preserving embeddings from S^{d-1} to S^{k-1} or R^k."
readme = "README.md"
authors = [
    { name = "Kentaro Nomura", email = "k.nomura@rlg.sys.es.osaka-u.ac.jp" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "nbformat>=5.10.4",
]
